@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-28T16:16:39Z",
-  "count_outdated" : 360,
-  "uniques_outdated" : 194,
-  "count" : 383,
-  "uniques" : 208,
+  "timestamp" : "2022-06-29T01:02:22Z",
+  "count_outdated" : 365,
+  "uniques_outdated" : 197,
+  "count" : 387,
+  "uniques" : 210,
   "clones" : [
-    {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ]
-    },
     {
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
