@@ -1,12 +1,7 @@
 {
-  "count": 23,
-  "uniques": 2,
+  "count": 22,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2022-06-14T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-15T00:00:00Z",
       "count": 2,
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
